Handle 'isolated islands' of cyclic dependencies of effectively unused data-blocks in 'Recursive cleanup' code #98029

Closed
opened 2022-05-11 01:32:34 +02:00 by Germano Cavalcante · 7 comments

Blender Version
Broken: 3.3-
Worked: Never

Short description of error
As stated by @mont29 in #96047#1315978, dependency cycles should be handled by the recursive purge feature (File -> Clean Up -> Recursive Unused Data-Blocks menu entry).
But sometimes, recursive cleanup do not remove cyclic dependencies.
2022-03-02_21-40-17.mp4

In #96047, @mont29 wrote:
... since they are both user-referencing each other... Well then, nothing else but manual deletion in those cases I guess :|

Although I don't think nodegroups should user-reference Objects, but that's for #geometry_nodes team to decide & handle.

Exact steps for others to reproduce the error

  • Open attached .blend file
  • Note when inspecting the Blender File that there are 1 Object (1 User), 1 Mesh (1 User) and 1 Material (1 User), even though they are not being used.
    This happens because the Object is being referenced by the Material and the Material is being referenced by the Object.
    untitled.blend
**Blender Version** Broken: 3.3- Worked: Never **Short description of error** As stated by @mont29 in #96047#1315978, dependency cycles should be handled by the recursive purge feature (`File -> Clean Up -> Recursive Unused Data-Blocks` menu entry). But sometimes, recursive cleanup do not remove cyclic dependencies. [2022-03-02_21-40-17.mp4](https://archive.blender.org/developer/F12894677/2022-03-02_21-40-17.mp4) > In #96047, @mont29 wrote: > ... since they are both user-referencing each other... Well then, nothing else but manual deletion in those cases I guess :| > > Although I don't think nodegroups should user-reference Objects, but that's for #geometry_nodes team to decide & handle. **Exact steps for others to reproduce the error** - Open attached .blend file - Note when inspecting the Blender File that there are 1 Object (1 User), 1 Mesh (1 User) and 1 Material (1 User), even though they are not being used. This happens because the Object is being referenced by the Material and the Material is being referenced by the Object. [untitled.blend](https://archive.blender.org/developer/F12894678/untitled.blend)
Author
Member

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

#96047 was marked as duplicate of this issue

#96047 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @Vyach, @cmbasnett

Added subscribers: @Vyach, @cmbasnett

This is even more of a known TODO than a known issue...

This is even more of a known TODO than a known issue...
Bastien Montagne changed title from 'Recursive cleanup' does not remove cyclic dependencies to Handle 'isolated islands' of cyclic dependencies of effectively unused data-blocks in 'Recursive cleanup' code 2022-05-11 10:25:37 +02:00

This issue was referenced by 97dd107070

This issue was referenced by 97dd10707097536df24dd7ca7d2a45b9a6408711

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-07-07 13:01:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98029
No description provided.